--- a/index.html
+++ b/index.html
@@ -65,6 +65,255 @@ Current time is : 4 PM : 50 : 22</pre>
     </form>
     <b class="answer" id="answer-10"></b>
 
+    <h3 class="question-11">11. Write a JavaScript program to convert temperatures to and from celsius, fahrenheit.
+        [Formula: c/5 = (f-32)/9]</h3>
+
+    <form id="celsiusToFahrenheit">
+        <label for="celsius">Celsius: </label>
+        <input type="number" id="celsius" placeholder="Enter temperature in Celsius">
+        <button type="submit">Convert to Fahrenheit</button>
+    </form>
+    <p id="answer-11"></p>
+    <h3 class="question-12">12. Write a JavaScript program to get the website URL (loading page).</h3>
+    <p id="answer-12"></p>
+
+
+    <section class="JavaScriptFunction" id="JavaScriptFunction">
+        <div>
+            <h3 class="question-13">13. Write a JavaScript function that reverses a number. Example x = 32243; Expected
+                Output :
+                34223</h3>
+
+            <form id="reverseNumber">
+                <input type="number" id="input-13" placeholder="Enter a number">
+                <button type="submit">Reverse Number</button>
+            </form>
+
+            <p id="answer-13"></p>
+        </div>
+        <h3 class="question-14">13. Write a JavaScript function that checks whether a passed string is palindrome or
+            not?</h3>
+
+        <form id="palindromeForm">
+            <input type="text" id="inputPalindrome" placeholder="Enter a string">
+            <button type="submit">Check Palindrome</button>
+        </form>
+
+        <p id="answer-14"></p>
+
+        <div>
+            <h3 class="question-16">16. Write a JavaScript function that generates all combinations of a string.</h3>
+
+            <form id="combinationsForm">
+                <input type="text" id="inputCombination" placeholder="Enter a string">
+                <button type="submit">Generate Combinations</button>
+            </form>
+
+            <p id="answer-16"></p>
+        </div>
+
+
+        <div>
+            <h3 class="question-17">17. Write a JavaScript function that returns a passed string with letters in
+                alphabetical
+                order.</h3>
+
+            <form id="alphabeticalForm">
+                <input type="text" id="inputAlphabetical" placeholder="Enter a string">
+                <button type="submit">Sort Letters</button>
+            </form>
+
+            <p id="answer-17"></p>
+        </div>
+
+
+
+
+
+        <div>
+            <h3 class="question-18">18. Write a JavaScript function that converts the first letter of each word in a
+                string to
+                uppercase.</h3>
+
+            <form id="uppercaseForm">
+                <input type="text" id="inputUppercase" placeholder="Enter a string">
+                <button type="submit">Convert to Uppercase</button>
+            </form>
+
+            <p id="answer-18"></p>
+        </div>
+
+        <div>
+
+            <div>
+                <h3 class="question-19">19. Write a JavaScript function that accepts a string as a parameter and finds
+                    the longest
+                    word within the string.</h3>
+
+                <form id="longestWordForm">
+                    <label for="input-19">Enter a string:</label>
+                    <input type="text" id="input-19" placeholder="Enter a string">
+                    <button type="submit">Find Longest Word</button>
+                </form>
+
+                <p id="answer-19"></p>
+            </div>
+
+        </div>
+
+        <div>
+            <h3 class="question-20">20. Write a JavaScript function that accepts a string as a parameter and counts the
+                number
+                of vowels within the string.</h3>
+
+            <form id="countVowelsForm">
+                <label for="input-20">Enter a string:</label>
+                <input type="text" id="input-20" placeholder="Enter a string">
+                <button type="submit">Count Vowels</button>
+            </form>
+
+            <p id="answer-20"></p>
+        </div>
+
+
+        <div>
+            <h3 class="question-21">21. Write a JavaScript function that accepts a number as a parameter and checks if
+                the
+                number is prime.</h3>
+
+            <form id="checkPrimeForm">
+                <label for="input-21">Enter a number:</label>
+                <input type="number" id="input-21" placeholder="Enter a number">
+                <button type="submit">Check Prime</button>
+            </form>
+
+            <p id="answer-21"></p>
+        </div>
+
+
+        <div>
+            <h3 class="question-22">22. Write a JavaScript function that accepts an argument and returns its type.</h3>
+
+            <form id="checkTypeForm">
+                <label for="input-22">Enter an argument:</label>
+                <input type="text" id="input-22" placeholder="Enter argument">
+                <button type="submit">Check Type</button>
+            </form>
+
+            <p id="answer-22"></p>
+        </div>
+
+        <div>
+            <h3 class="question-23">23. Write a JavaScript function to generate an n x n identity matrix.</h3>
+
+            <form id="identityMatrixForm">
+                <label for="input-23">Enter size n:</label>
+                <input type="number" id="input-23" placeholder="Enter n">
+                <button type="submit">Generate Identity Matrix</button>
+            </form>
+
+            <pre id="answer-23"></pre>
+        </div>
+
+
+        <div>
+            <h3 class="question-24">24. Write a JavaScript function to find the second lowest and second greatest
+                numbers in an
+                array.</h3>
+
+            <form id="numbersForm">
+                <label for="input-numbers">Enter numbers separated by commas:</label>
+                <input type="text" id="input-numbers" placeholder="e.g., 1,2,3,4,5">
+                <button type="submit">Find Second Lowest and Second Greatest</button>
+            </form>
+
+            <p id="answer-24"></p>
+        </div>
+        <div>
+            <h3 class="question-25">25. Write a JavaScript function to check if a number is a perfect number.</h3>
+
+            <form id="perfectNumberForm">
+                <label for="input-number">Enter a number:</label>
+                <input type="number" id="input-number" placeholder="Enter a positive integer">
+                <button type="submit">Check Perfect Number</button>
+            </form>
+
+            <p id="answer-25"></p>
+        </div>
+        <div>
+            <h3 class="question-26">13. Write a JavaScript function to compute the factors of a positive integer.</h3>
+
+            <form id="factorForm">
+                <label for="input-number">Enter a positive integer:</label>
+                <input type="number" id="input-number26" placeholder="Enter a positive integer">
+                <button type="submit">Compute Factors</button>
+            </form>
+
+            <p id="answer-26"></p>
+        </div>
+
+
+        <div>
+            <h3 class="question-28">28. Write a JavaScript function to compute the value of bn where n is the exponent
+                and b is
+                the base.</h3>
+
+            <form id="exponentForm">
+                <label for="input-base">Enter the base (b):</label>
+                <input type="number" id="input-base" placeholder="Enter base">
+                <label for="input-exponent">Enter the exponent (n):</label>
+                <input type="number" id="input-exponent" placeholder="Enter exponent">
+                <button type="submit">Compute Exponent</button>
+            </form>
+
+            <p id="answer-28"></p>
+        </div>
+        <div>
+            <h3 class="question-29">29. Write a JavaScript function to extract unique characters from a string.</h3>
+
+            <form id="uniqueCharactersForm">
+                <label for="input-string">Enter a string:</label>
+                <input type="text" id="input-string" placeholder="Enter string">
+                <button type="submit">Extract Unique Characters</button>
+            </form>
+
+            <p id="answer-29"></p>
+        </div>
+
+
+        <div>
+            <h3 class="question-30">30. Write a JavaScript function to get the number of occurrences of each letter in
+                specified
+                string.</h3>
+
+            <form id="occurrencesForm">
+                <label for="input-string-occurrences">Enter a string:</label>
+                <input type="text" id="input-string-occurrences" placeholder="Enter string">
+                <button type="submit">Count Occurrences</button>
+            </form>
+
+            <div id="answer-30"></div>
+        </div>
+
+
+        <div>
+            <h3 class="question">Binary Search in JavaScript</h3>
+
+            <form id="binarySearchForm">
+                <label for="input-array">Enter a sorted array (comma-separated):</label>
+                <input type="text" id="input-array" placeholder="e.g., 1, 2, 3, 4, 5">
+                <br>
+                <label for="search-value">Enter value to search:</label>
+                <input type="number" id="search-value" placeholder="Enter value">
+                <button type="submit">Search</button>
+            </form>
+
+            <p id="search-result"></p>
+        </div>
+
+    </section>
+
+
 
     <script src="./index.js"></script>
 </body>
